# opendeck-ss550

./: 40-opendeck-akp153.rules  40-opendeck-ss550.rules  Cargo.toml  README.md  justfile  manifest.json
src/: device.rs  dispatcher.rs  inputs.rs  main.rs  mappings.rs  watcher.rs
